Fix layout issues, Improve Accesibility and Ensure consistent rem and em

--- a/styles.css
+++ b/styles.css
@@ -9,38 +9,42 @@
   --black: hsl(0, 0%, 0%);
 }
 html {
-  font-size: 10px;
+  margin: 0;
+  padding: 0;
+  font-size: 62.5%;
 }
 body {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
 }
 .work-area {
+  flex: 1;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: minmax(30em, 35%), auto, 8rem;
+  grid-template-rows: auto 1fr auto;
   grid-template-areas:
     "header"
     "main"
     "footer";
-  place-items: center;
-  place-content: center;
   width: 100%;
 }
-.header {
+header {
+  margin-inline: auto;
   grid-area: header;
   text-align: center;
-  margin: 2em auto;
 }
-.main {
+main {
+  padding: 1rem;
   grid-area: main;
 }
-.footer {
+footer {
   grid-area: footer;
 }
 .title-1 {
   font-weight: 200;
-  margin-block-end: 0;
+  margin-block: 0;
 }
 .title-1,
 .title-2 {
@@ -53,24 +57,22 @@ body {
 .title-p {
   width: clamp(36ch, 50vw, 60ch);
   font-weight: 400;
-  font-size: 1.2em;
-  margin-inline: auto;
+  font-size: 1.2rem;
 }
 .block {
   display: flex;
   max-width: 35ch;
   flex-direction: column;
-  min-height: 14em;
-  margin: 2em auto;
-  padding: 2em;
-  box-shadow: 0 0.6em 1.5em 0 hsla(211, 36%, 59%, 0.304);
+  min-height: 14rem;
+  padding: 2rem;
+  box-shadow: 0 0.6rem 1.5rem 0 hsla(211, 36%, 59%, 0.304);
 }
 .block p {
   font-size: 1rem;
   flex: 1;
   color: var(--paragraph-color-light);
   font-weight: 400;
-  margin: 0.5em 0;
+  margin: 0.5rem 0;
 }
 .block h2 {
   font-size: 1.5rem;
@@ -80,7 +82,7 @@ body {
 }
 .block img {
   align-self: flex-end;
-  width: 4em;
+  width: 4rem;
 }
 .cyan {
   border-top: 0.5em solid var(--border-cyan);
@@ -96,8 +98,8 @@ body {
 }
 .attribution {
   text-align: center;
-  font-size: 1em;
-  margin: 1em;
+  font-size: 1rem;
+  margin: 1rem;
   color: var(--paragraph-color-dark);
 }
 .attribution a {
@@ -114,17 +116,17 @@ body {
   }
 }
 @media screen and (min-width: 50rem) {
-  .main {
+  main {
     display: grid;
     grid-template-columns: repeat(3, minmax(35ch, 1fr));
-    grid-template-rows: repeat(4, minmax(19rem, auto));
-    gap: 2rem;
+    grid-template-rows: repeat(4, 9rem);
     width: 90%;
+    gap: 1.5rem 2rem;
     margin-inline: auto;
   }
   .cyan {
     grid-column: 1;
-    grid-row: 1 / span 2;
+    grid-row: 2 / span 2;
     align-self: center;
     justify-self: flex-end;
   }
@@ -134,11 +136,11 @@ body {
   }
   .orange {
     grid-column: 2;
-    grid-row: 2;
+    grid-row: 3;
   }
   .blue {
     grid-column: 3;
-    grid-row: 1 / span 2;
+    grid-row: 2 / span 2;
     align-self: center;
     justify-self: flex-start;
   }
